some basic setup

--- a/index.html
+++ b/index.html
@@ -14,7 +14,166 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <h1>Main Point</h1>
+    <div class="container">
+      <div class="row">
+        <div class="col-12">
+          <div class="bg-light text-center">
+            <hr />
+            <br />
+            <h1>More Utility Classes</h1>
+            <br />
+            <hr />
+          </div>
+        </div>
+        <div class="col-12">
+          <div class="bg-light text-center">
+            <hr />
+            <br />
+            <h3>Position</h3>
+            <p>Position elements at top or bottom of viewport</p>
+            <ul class="li">
+              fixed-top
+            </ul>
+            <ul class="li">
+              fixed-bottom
+            </ul>
+            <ul class="li">
+              sticky-top
+            </ul>
+            <ul class="li">
+              Responsive classes also
+            </ul>
+            <ul class="li">
+              <strong>e.g.:</strong>
+              sticky-lg-top
+            </ul>
+            <hr />
+          </div>
+          <div class="rounded-bottom fixed-top bg-danger text-white opacity-75">
+            Position Top
+          </div>
+
+          <button class="btn btn-primary rounded-bottom sticky-md-top">
+            Position Top
+          </button>
+
+          <div class="bg-light text-center">
+            <hr />
+            <br />
+            <h3>Display</h3>
+            <p>Utilities that effect the display property</p>
+            <ul class="li">
+              d-none
+            </ul>
+            <ul class="li">
+              d-inline
+            </ul>
+            <ul class="li">
+              d-block
+            </ul>
+            <ul class="li">
+              d-inline-block
+            </ul>
+            <ul class="li"></ul>
+            <hr />
+          </div>
+
+          <div class="col m-5">
+            <div class="bg-danger text-white p-5 d-none$ m-3">
+              If we add d-none to this element it will disappear
+            </div>
+          </div>
+
+          <div class="col m-5">
+            <div class="d-inline bg-primary text-white py-5 m-0">
+              These block elements
+            </div>
+            <div class="d-inline bg-warning text-black py-5 m-0">
+              are positioned as inline
+            </div>
+          </div>
+
+          <div class="col m-5">
+            <span class="d-block bg-primary text-white py-5 m-0">
+              These inline elements
+            </span>
+            <span class="d-block bg-warning text-black py-5 m-0">
+              are positioned as block
+            </span>
+          </div>
+
+          <div class="bg-light text-center">
+            <hr />
+            <br />
+            <h3>Display</h3>
+            <p>Utilities that effect the display property</p>
+            <ul class="li">
+              grid
+            </ul>
+            <ul class="li">
+              table
+            </ul>
+            <hr />
+          </div>
+
+          <div class="d-table table-primary">
+            <div class="d-table-row table-primary">
+              <div class="d-table-cell table-primary">Display Grid</div>
+              <div class="d-table-cell">Display Grid</div>
+              <div class="d-table-cell">Display Grid</div>
+            </div>
+          </div>
+
+          <div class="bg-light text-center">
+            <hr />
+            <br />
+            <h3>Flex</h3>
+            <br />
+            <hr />
+          </div>
+
+          <div class="bg-light text-center">
+            <hr />
+            <br />
+            <h3>Screen Readers</h3>
+            <br />
+            <hr />
+          </div>
+
+          <div class="bg-light text-center">
+            <hr />
+            <br />
+            <h3>Shadows</h3>
+            <br />
+            <hr />
+          </div>
+
+          <div class="bg-light text-center">
+            <hr />
+            <br />
+            <h3>Sizing</h3>
+            <br />
+            <hr />
+          </div>
+
+          <div class="bg-light text-center">
+            <hr />
+            <br />
+            <h3>Vertical Alignment</h3>
+            <br />
+            <hr />
+          </div>
+
+          <div class="bg-light text-center">
+            <hr />
+            <br />
+            <h3>Visibility</h3>
+            <br />
+            <hr />
+          </div>
+        </div>
+      </div>
+    </div>
 
     <section class="footer"></section>
     <script
