--- a/index.html
+++ b/index.html
@@ -14,9 +14,64 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <h1>Main Point</h1>
+    <h2>Maps & Images</h2>
 
-    <section class="footer"></section>
+    <div class="d-flex vh-100 align-items-end">
+      <div class="container-fluid">
+        <div class="row">
+          <div class="col-12 d-flex flex-column">
+            <div class="lead mx-auto">
+              The CSS used to make the maps responsive
+            </div>
+            <pre class="mx-auto bg-dark p-5">
+              <code>
+.map-responsive{
+    overflow:hidden;
+    padding-bottom:50%;
+    position:relative;
+    height:0;
+}
+
+.map-responsive iframe{
+    left:0;
+    top:0;
+    height:100%;
+    width:100%;
+    position:absolute;
+}
+              </code>
+            </pre>
+          </div>
+        </div>
+        <div class="row bg-light">
+          <div class="col-6 d-flex">
+            <div class="container-fluid align-self-center">
+              <div class="map-responsive">
+                <iframe
+                  src="https://www.google.com/maps/embed/v1/place?key=AIzaSyA0s1a7phLN0iaD6-UE7m4qP-z21pH0eSc&q=Eiffel+Tower+Paris+France"
+                  width="100%"
+                  height="100%"
+                  frameborder="0"
+                  style="border: 0"
+                  allowfullscreen
+                ></iframe>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div>
+              <img
+                src="https://place-hold.it/300x300"
+                alt="Responsive image"
+                class="img-fluid"
+              />
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <section class="footer bg-dark text-white">Footer</section>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
